--- a/Clients/SampleSolution.Web/wwwrootsrc/core/scripts/components/header/HeaderStyles.scss
+++ b/Clients/SampleSolution.Web/wwwrootsrc/core/scripts/components/header/HeaderStyles.scss
@@ -1,6 +1,5 @@
-@import './../../../content/scss/variables';
+@import "./../../../content/scss/variables";
 
-.HeaderController
-{
-
+.HeaderController {
+    display: block;
 }
