--- a/Clients/SampleSolution.Web/wwwrootsrc/core/scripts/components/navigation/NavigationMenu.scss
+++ b/Clients/SampleSolution.Web/wwwrootsrc/core/scripts/components/navigation/NavigationMenu.scss
@@ -1,7 +1,6 @@
-@import './../../../content/scss/variables';
+@import "./../../../content/scss/variables";
 
-.NavigationMenuController
-{
+.NavigationMenuController {
     background-color: rgba(53, 55, 61, 1);
     height: 100%;
 }
