--- a/Clients/SampleSolution.Web/wwwrootsrc/landing/scripts/pages/index-page/IndexPagesStyles.scss
+++ b/Clients/SampleSolution.Web/wwwrootsrc/landing/scripts/pages/index-page/IndexPagesStyles.scss
@@ -1,6 +1,5 @@
-@import "./../../../../core/content/scss/variables.scss";
+@import "./../../../../core/content/scss/variables";
 
-.IndexPageController
-{
-
+.IndexPageController {
+    display: block;
 }
