prepare for launch

--- a/Clients/SampleSolution.Web/wwwrootsrc/core/scripts/components/shell/ShellStyles.scss
+++ b/Clients/SampleSolution.Web/wwwrootsrc/core/scripts/components/shell/ShellStyles.scss
@@ -13,6 +13,7 @@ $gl-gutter: 2em;
 @import "./../../../../../node_modules/gridlex/src/gridlex-preprocessing";
 @import "./../../../../../node_modules/gridlex/src/gridlex-mixins";
 @import "./../../../../../node_modules/gridlex/src/gridlex-classes";
+@import "./../../../content/scss/alertify";
 
 .ShellController {
     height: 100%;
