begin separation shell and layout

--- a/Clients/SampleSolution.Web/wwwrootsrc/core/scripts/components/shell/ShellStyles.scss
+++ b/Clients/SampleSolution.Web/wwwrootsrc/core/scripts/components/shell/ShellStyles.scss
@@ -3,7 +3,8 @@
 @import "./../../../../../node_modules/gridlex/src/gridlex-vars";
 @import "./../../../content/scss/utility";
 
-$gl-mq-list: (lg: $bigScreen,
+$gl-mq-list: (
+lg: $bigScreen,
 md: $middleScreen,
 sm: $smallScreen,
 xs: 20em);
@@ -16,6 +17,5 @@ $gl-gutter: 2em;
 @import "./../../../content/scss/alertify";
 
 .ShellController {
-    height: 100%;
     min-height: 100vh;
 }
