prepare login page

--- a/Clients/SampleSolution.Web/wwwrootsrc/core/scripts/components/shell/ShellStyles.scss
+++ b/Clients/SampleSolution.Web/wwwrootsrc/core/scripts/components/shell/ShellStyles.scss
@@ -17,5 +17,5 @@ $gl-gutter: 2em;
 @import "./../../../content/scss/alertify";
 
 .ShellController {
-    min-height: 100vh;
+    display: block;
 }
