--- a/Clients/SampleSolution.Web/wwwrootsrc/login/scripts/components/login-layout/LoginLayoutStyles.scss
+++ b/Clients/SampleSolution.Web/wwwrootsrc/login/scripts/components/login-layout/LoginLayoutStyles.scss
@@ -1,4 +1,7 @@
 
 .LoginLayoutController {
-    // code here
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
