prepare for test login page

--- a/Clients/SampleSolution.Web/wwwrootsrc/login/scripts/components/login-layout/LoginLayoutStyles.scss
+++ b/Clients/SampleSolution.Web/wwwrootsrc/login/scripts/components/login-layout/LoginLayoutStyles.scss
@@ -4,4 +4,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    .login-form {
+        width: 24em;
+        padding: 2em;
+        text-align: center;
+    }
 }
