complete redesign sig inpage

--- a/Clients/SampleSolution.Web/wwwrootsrc/core/content/scss/material.scss
+++ b/Clients/SampleSolution.Web/wwwrootsrc/core/content/scss/material.scss
@@ -35,37 +35,37 @@ h6 a {
 h1 {
     font-size: 4.2em;
     line-height: 110%;
-    margin: 2.8em 0 1.68em 0;
+    margin: (1em/1.5) 0 (1em/2.5) 0;
 }
 
 h2 {
     font-size: 3.56em;
     line-height: 110%;
-    margin: 2.3733333333em 0 1.424em 0;
+    margin: (1em/1.5) 0 (1em/2.5) 0;
 }
 
 h3 {
     font-size: 2.92em;
     line-height: 110%;
-    margin: 1.9466666667em 0 1.168em 0;
+    margin: (1em/1.5) 0 (1em/2.5) 0;
 }
 
 h4 {
     font-size: 2.28em;
     line-height: 110%;
-    margin: 1.52em 0 0.912em 0;
+    margin: (1em/1.5) 0 (1em/2.5) 0;
 }
 
 h5 {
     font-size: 1.64em;
     line-height: 110%;
-    margin: 1.0933333333em 0 0.656em 0;
+    margin: (1em/1.5) 0 (1em/2.5) 0;
 }
 
 h6 {
     font-size: 1.15em;
     line-height: 110%;
-    margin: 0.7666666667em 0 0.46em 0;
+    margin: 1/1.5em 0 1/2.5em 0;
 }
 
 // Text Styles
