--- a/Clients/SampleSolution.Web/wwwrootsrc/login/scripts/components/login-layout/LoginLayoutStyles.scss
+++ b/Clients/SampleSolution.Web/wwwrootsrc/login/scripts/components/login-layout/LoginLayoutStyles.scss
@@ -1,12 +1,30 @@
-.LoginLayoutController {
-    height: 90vh;
+.LoginLayout {
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #ddd;
 
     .login-form {
         width: 24em;
-        padding: 2em;
+        padding: 0 2em 2em;
         text-align: center;
+    }
+
+    .input-block {
+        max-width: 14em;
+        margin: auto;
+        margin-top: 0.5em;
+    }
+
+    .link-block {
+        font-size: 0.875em;
+        margin-bottom: 1em;
+    }
+
+    .avatar {
+        width: 100%;
+        height: 10em;
+        opacity: 0.5;
     }
 }
