--- a/Clients/SampleSolution.Web/wwwrootsrc/login/scripts/components/login-layout/LoginLayoutStyles.scss
+++ b/Clients/SampleSolution.Web/wwwrootsrc/login/scripts/components/login-layout/LoginLayoutStyles.scss
@@ -1,34 +1,63 @@
+@import "./../../../../core/content/scss/variables.scss";
+
 .LoginLayout {
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #ddd;
-    background-image: url("./content/images/login-wallpaper-blur5px-1920w.webp");
-    background-size: cover;
-    background-position: center;
+
+    .login-background {
+        background-image: url("./content/images/login-wallpaper-960w.webp");
+        background-size: cover;
+        background-position: center;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        filter: blur(1vh);
+    }
 
     .login-form {
-        width: 24em;
+        width: 36em;
         padding: 0 2em 2em;
         text-align: center;
         max-height: 90vh;
         overflow: auto;
+        z-index: 2;
+
+        @media (max-width: $middleScreen) {
+            // code
+        }
+
+        @media (max-width: $smallScreen) {
+            max-height: unset;
+            height: 100vh;
+        }
     }
 
-    .input-block {
-        margin: auto;
-        margin-top: 0.5em;
+    .block-title {
+        margin-bottom: 0;
+
+        @media (max-width: $smallScreen) {
+            margin-bottom: 0.4em;
+        }
     }
 
     .link-block {
         font-size: 0.875em;
-        margin-bottom: 1em;
+        margin-bottom: 0.25em;
     }
 
     .avatar {
         width: 100%;
         height: 10em;
         opacity: 0.25;
+    }
+
+    .full-width {
+        width: 100%;
     }
 }
