fix title order

--- a/Clients/SampleSolution.Web/wwwrootsrc/login/scripts/components/login-layout/LoginLayoutStyles.scss
+++ b/Clients/SampleSolution.Web/wwwrootsrc/login/scripts/components/login-layout/LoginLayoutStyles.scss
@@ -60,4 +60,10 @@
     .full-width {
         width: 100%;
     }
+
+    .mobile-order {
+        @media (max-width: $smallScreen) {
+            order: -1;
+        }
+    }
 }
